# expobeton-chatbot

./: .env.example  .gitignore  .railway-trigger  CONVERSATION_TRACKING.md  CORRECTION_EMAILS.md  DEPLOYMENT-FIXES-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.actions  Dockerfile.rasa  FIX-DEPLOYMENT.md  HEROKU-DEPLOYMENT-INSTRUCTIONS.md  KUBERNETES_DEPLOYMENT.md  Procfile  QUICK_START.md  README-HEROKU.md  README.md  RENDER_CONFIG_CHECKLIST.md  RENDER_DEPLOYMENT.md  app.json  combined_server.py  config.yml  config_minimal.yml  config_simple.yml  copy_clean_model.py  create_empty_model.py  create_manual_model.py  create_minimal_model.py  create_minimal_rasa_pro_model.py  deploy-k8s.sh  deploy.sh  docker-compose.yml  domain.yml  domain_simple.yml  endpoints.yml  fix_model.py  flask_app.py  flows.yml  health_check.py  (+30 more)
actions/: actions.py
data/: nlu.yml  rules.yml  stories.yml
data_simple/: nlu.yml  rules.yml
docs/: 01_Cloture_Kinshasa_ExpoBeton_2024.txt  01_KONGO_CENTRAL_Invitation_ExpoBeton_2024.txt  07_Invitation_ExpoBeton_2024.txt  1.txt  10_Brochure_ExpoBeton_Kin_V12_LIGHT.txt  14_Brochure_ExpoBeton_RDC_2023.txt  15_Invitation_ExpoBeton_2023-EN.txt  15_Invitation_ExpoBeton_2023.txt  21_Invitation_ExpoBeton_2023.txt  24_Invitation_ExpoBeton_2023.txt  6_Brochure_ExpoBeton_2022.txt  7_Invitation_Programme_EB_2022.txt  9_EN_Brochure_ExpoBeton_DRC_2023.txt  Assistance_Voyage_ExpoBeton_Inzo_na_Beto.txt  Brochure_ExpoBeton_RDC_2021.txt  Brochure_ExpoBeton_RDC_2023.txt  Brochure_ExpoBeton_RDC_2026.txt  ENG_Brochure_ExpoBeton_RDC_2021.txt  (+166 more)
(+43 files in other folders)
